// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render actions for non admin 1`] = `
<div
  className="page page-limited"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="organization.members.page"
  />
  <Suggestions
    suggestions="organization_members"
  />
  <MembersPageHeader
    loading={false}
  />
  <MembersListHeader
    handleSearch={[Function]}
    total={2}
  />
  <MembersList
    members={
      Array [
        Object {
          "avatar": "",
          "groupCount": 3,
          "login": "admin",
          "name": "Admin Istrator",
        },
        Object {
          "avatar": "7daf6c79d4802916d83f6266e24850af",
          "groupCount": 1,
          "login": "john",
          "name": "John Doe",
        },
      ]
    }
    organization={
      Object {
        "key": "foo",
        "name": "Foo",
      }
    }
    organizationGroups={Array []}
    removeMember={[Function]}
    updateMemberGroups={[Function]}
  />
  <ListFooter
    count={2}
    loadMore={[Function]}
    ready={true}
    total={2}
  />
</div>
`;

exports[`should render actions for admin 1`] = `
<div
  className="page page-limited"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="organization.members.page"
  />
  <Suggestions
    suggestions="organization_members"
  />
  <MembersPageHeader
    loading={true}
  >
    <div
      className="page-actions"
    >
      <AddMemberForm
        addMember={[Function]}
        memberLogins={Array []}
        organization={
          Object {
            "canAdmin": true,
            "key": "foo",
            "name": "Foo",
          }
        }
      />
      <DocTooltip
        className="spacer-left"
        doc="organizations/add-organization-member"
      />
    </div>
  </MembersPageHeader>
  <MembersListHeader
    handleSearch={[Function]}
    total={2}
  />
  <MembersList
    members={
      Array [
        Object {
          "avatar": "",
          "groupCount": 3,
          "login": "admin",
          "name": "Admin Istrator",
        },
        Object {
          "avatar": "7daf6c79d4802916d83f6266e24850af",
          "groupCount": 1,
          "login": "john",
          "name": "John Doe",
        },
      ]
    }
    organization={
      Object {
        "canAdmin": true,
        "key": "foo",
        "name": "Foo",
      }
    }
    organizationGroups={Array []}
    removeMember={[Function]}
    updateMemberGroups={[Function]}
  />
  <ListFooter
    count={2}
    loadMore={[Function]}
    ready={false}
    total={2}
  />
</div>
`;
